syntax = "proto3";

package shortener;

import "google/protobuf/empty.proto";

option go_package = "shortener/proto";

message GenerateBatchRequest {
    message BatchRequest {
        string original_url = 1;
        string correlation_id = 2;
    }
    repeated BatchRequest urls = 1;
}

message GenerateBatchResponse {
    message BatchResponse {
        string short_url = 1;
        string correlation_id = 2;
    }
    repeated BatchResponse urls = 1;
}

message URLMappings {
    message URLMapping {
        string short_url = 1;
        string long_url = 2;
    }
    repeated URLMapping urls = 1;
}

message UserURLs {
    repeated string urls = 1;
}

message StorageStats {
    int64 user_count = 1;
    int64 url_count = 2;
}

message URL {
    string url = 1;
}

service ShortenerHandlerGrpc {
  rpc Short2LongURL(URL) returns (URL);
  rpc Generate(URL) returns (URL);
  rpc GenerateBatch(GenerateBatchRequest) returns (GenerateBatchResponse);
  
  rpc GetUserURLs(google.protobuf.Empty) returns (URLMappings);
  rpc DeleteUserURLs(UserURLs) returns (google.protobuf.Empty);

  rpc GetStats(google.protobuf.Empty) returns (StorageStats);
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
}